# kappaml-mcp

./: .gitignore  Dockerfile  README.md  kappaml_client.py  pyproject.toml  server.py
