[project]
name = "kappaml-mcp"
version = "0.1.0"
description = "MCP server exposing the KappaML API as tools for AI assistants"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.8.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
